--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.7"
 services:
   mysql:
     environment:
-      MYSQL_ROOT_PASSWORD: 'P@s$w0'
+      MYSQL_ROOT_PASSWORD: 'P@s$$w0'
       MYSQL_USER: 'admin_db'
-      MYSQL_PASSWORD: 'P@s$tdB1'
+      MYSQL_PASSWORD: 'P@s$$tdB1'
       MYSQL_DATABASE: 'test_db'
     container_name: mysql
     image: mysql:8.0
@@ -12,13 +12,15 @@ services:
     volumes:
       - mysql_volume:/var/lib/mysql
     ports:
-      - '3307:3306'
+      - "3306:3306"
     expose:
-      - '3307'
+      - "3306"
   nginx:
     image: nginx:latest
     ports: 
-      - "81:80"
+      - "80:80"
+    expose:
+      - "80"
     restart: always
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
